--- a/index.html
+++ b/index.html
@@ -558,7 +558,31 @@
             <div class="block-18">
               <div class="text">
                 <strong class="number" data-number="4">0</strong>
-                <span>Complete Projects</span>
+                <span>Completed Web Projects</span>
+              </div>
+            </div>
+          </div>
+		  <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
+            <div class="block-18">
+              <div class="text">
+                <strong class="number" data-number="3">0</strong>
+                <span>Web Projects In Progress</span>
+              </div>
+            </div>
+          </div>
+		  <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
+            <div class="block-18">
+              <div class="text">
+                <strong class="number" data-number="20">0</strong>
+                <span>Completed Logo/ Flyer designs</span>
+              </div>
+            </div>
+          </div>
+		  <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
+            <div class="block-18">
+              <div class="text">
+                <strong class="number" data-number="30">0</strong>
+                <span>Successful Reports Writing</span>
               </div>
             </div>
           </div>
@@ -576,12 +600,12 @@
       </div>
     </section>
 
-    <section class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpg)">
+    <section class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpeg)">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
-						<h2>I'm <span>Available</span> for freelancing</h2>
-						<p>Safe. Reliable. Quick.</p>
+						<h2>I'm <span>Available</span> for freelancing...</h2>
+						<h4><i>Safe. Reliable. Quick.</i></h4>
 						<p class="mb-0"><a href="https://www.fiverr.com/s2/0c68103da9" class="btn btn-primary py-3 px-5">Hire me</a></p>
 					</div>
 				</div>
