--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2023</span>
     					<h2>Diploma in Computer Fundamentals</h2>
-    					<span class="position">Study Session</span>
+    					<span class="position">Study Section</span>
     					<p class="mt-4">Intermediate</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2023</span>
     					<h2>Diploma in C Sharp .Net Development</h2>
-    					<span class="position">Study Session</span>
+    					<span class="position">Study Section</span>
     					<p class="mt-4">Intermediate</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
