--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">Unity, Obantoko, Abeokuta, Ogun State.</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+234 9014 698 926</span></a></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+234 9117 690 426, +234 8105 518 235</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">greatmoh007@gmail.com</span></a></li>
 	              </ul>
 	            </div>
