--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://1234567920">+234 9014 698 926</a></p>
+	            <p><a href="tel://1234567920">+234 9117 690 426, +234 8105 518 235</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
